# tiralabra-jpeg

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
documentation/: bibliography.md  implementation.md  manual.md  specification.md  testing.md
documentation/assets/: test-run.txt
documentation/weekly-reports/: week-1-2.md  week-3.md  week-4.md  week-5.md  week-6.md
src/: block_test.py  config.py  downsampler_test.py  ex_v2.py  image_object_test.py  index.py  test-run.txt
src/app/: app.py  console_io.py
src/core/: image.py  util.py
src/data/: grayscale1-1100x1400.tif  grayscale2-1024x1024.tif  rgb2-1024x1024.tif  test-128x128.tif  test-16x16.tif  test-200x300.tif  test_img.tif
src/entities/: block.py  compressor.py  decoder.py  downsampler.py  encoder.py  encoder2.py  image_object.py  img.py
src/jpeg/: block.py  util.py
src/old/: block.py  downsampler.py  example.py  image_object.py
src/tests/core/: image_test.py
src/tests/entities/: block_test.py  compressor_test.py  downsampler_test.py  encoder_test.py  image_object_test.py  img_test.py
src/tests/jpeg/: image_test.py
src/tests/util/: block_test.py  huffman_test.py  img_test.py  linalg_test.py  run_length_test.py  util_test.py  zigzag_test.py
src/ui/: app.py  console_io.py  example.py
src/util/: block.py  huffman.py  huffman2.py  img.py  linalg.py  rle.py  run_length.py  util.py  zigzag.py
